tests/NormalTests/paczka1/fuzzy1/13906086.err
Error in line 5: zKqFh S363 72,1
Error in line 7: bpNCKsOuq3 A888 97,1
Error in line 13: zKqFh S242 43,60
Error in line 8: r9rnOf S242 57,9
Error in line 10: zKqFh A794 18,0
Error in line 20: zKqFh S242 175,9
Error in line 31: r9rnOf S363 60,1
